RESOLVED FIXED232116
WKErrorRef.h does't have some error definitions
https://bugs.webkit.org/show_bug.cgi?id=232116
Summary WKErrorRef.h does't have some error definitions
Takashi Komori
Reported 2021-10-21 16:47:51 PDT
We can get error code by using WKErrorGetErrorCode() from WKErrorRef but some error definitions don't exist in WKErrorRef.h Therefore, UIProcess has to handle such errors only by number and it is inconvenient. In this ticket, we add error definitions which exist in APIErrors.h but doesn't exist in WKErrorRef.h
Attachments
Patch (2.29 KB, patch)
2021-10-21 17:20 PDT, Takashi Komori
no flags
Takashi Komori
Comment 1 2021-10-21 17:20:53 PDT
EWS
Comment 2 2021-10-22 11:22:28 PDT
Committed r284698 (243415@main): <https://commits.webkit.org/243415@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442094 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-22 11:23:20 PDT
Note You need to log in before you can comment on or make changes to this bug.