WKErrorRef.h does't have some error definitions https://bugs.webkit.org/show_bug.cgi?id=232116

Reviewed by Alex Christensen.

Add error definitions which exist in APIrror.h but do not exist in WKErrorRef.h

        kWKErrorCodeCancelled
        kWKErrorCodeFileDoesNotExist

No test as this patch does not change code behavior.

* Shared/API/c/WKErrorRef.cpp:
(WKErrorGetErrorCode):
* Shared/API/c/WKErrorRef.h:


Canonical link: https://commits.webkit.org/243415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284698 268f45cc-cd09-0410-ab3c-d52691b4dbfc